# ai-workload-router

./: .env.example  .gitignore  CASE_STUDY.md  LICENSE  README.md  calculator.html  case-study.html  pyproject.toml  run_benchmark.py  run_effort_grid.py  tune_cascade.py  validate_judge.py
.github/workflows/: tests.yml
data/: benchmark_report.md  benchmark_report_claude_tiers_cascade.md  benchmark_report_claude_tiers_cascade_hard.md  benchmark_report_claude_tiers_cascade_verifier-claude-haiku-4-5.md  benchmark_report_claude_tiers_cascade_verifier-claude-haiku-4-5_hard.md  benchmark_report_claude_tiers_classified.md  benchmark_report_claude_tiers_classified_hard.md  benchmark_report_claude_tiers_learned_v3.md  benchmark_report_claude_tiers_v3.md  benchmark_report_cross_vendor_classified.md  effort_grid.md  human_label_sheet.csv  tasks.json  tasks_hard.json  tasks_v3.json
docs/: PRD.md  V2_FINDINGS.md  V3_DESIGN.md  V3_FINDINGS.md
src/router/: __init__.py  cascade.py  classifier.py  config.py  db.py  gates.py  judge_validation.py  learned.py  report.py  router.py  scoring.py  secrets.py
src/router/adapters/: __init__.py  anthropic_adapter.py  base.py  cache.py  mock.py  openai_compatible.py
src/router/benchmark/: __init__.py  tasks.py
tests/: __init__.py  test_cache.py  test_cascade.py  test_classifier.py  test_db.py  test_end_to_end.py  test_gates.py  test_gemini.py  test_judge_validation.py  test_learned.py  test_report.py  test_report_paths.py  test_router.py  test_routing_overhead.py  test_scoring.py  test_v2_routing.py
