[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-workload-router"
version = "0.1.0"
description = "Routes LLM tasks to the cheapest capable model while logging cost, latency, and quality"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "openai",
    "google-generativeai",
    "httpx",
    "pydantic",
    "python-dotenv",
    "pytest",
]

[project.scripts]
# Entry point: python run_benchmark.py (see README for usage)
